Making copyedits suggested by Copilot + adding headline with an assist from ChatGPT

--- a/2025/2025-09-07-wir.md
+++ b/2025/2025-09-07-wir.md
@@ -1,5 +1,5 @@
-# TKTK
-## TKTK
+# Trump II offers crypto welcome regulatory wins — and big reputational risks
+## Market watchdogs are working together, IPOs are back, and Polymarket is eyeing a U.S. return. But the First Family's grifting looms large.
 
 ![A lone tangerine against an aqua-colored background](https://w3w.news/img/mae-wu-1920.jpg)
 *Photo illustration by Mae Wu via Unsplash*
@@ -24,7 +24,7 @@ As has been the case since the new term's [early days](https://peteramckay.mediu
 
 - **Lighter regulation** has also emboldened several crypto companies this year to make traditional stock offerings on Wall Street exchanges. The latest: Shares of Solana treasury company SOL Strategies are [expected to begin trading](https://decrypt.co/338337/solana-treasury-company-sol-strategies-begin-trading-nasdaq) on Nasdaq this week. Separately, the Winklevoss brothers' Gemini Space Station, a crypto exchange and custodian firm, [registered](https://techcrunch.com/2025/08/15/winklevoss-twins-crypto-company-gemini-files-for-ipo/) with the SEC on Friday to do an initial public offering (IPO) of shares soon, pending the regulator's approval.
 
-**On a less promising note,** however, there are Trump's increasingly erratic economic policies and constant shirking of free-market principles traditionally associated with conservative administrations.
+**On a less promising note,** however, there are Trump's increasingly erratic economic policies and constant shirking of the free-market principles traditionally associated with conservative administrations.
 
 There's also the Trump family's incessant self-dealing, much of it in the crypto arena. We got another reminder of that on Monday, when the governance token for Trump-backed World Liberty Financial [began trading](https://finance.yahoo.com/news/trump-backed-world-liberty-ethereum-152557637.html). The tokens immediately leapt in value, but by Thursday they had already fallen [50% off their highs](https://finance.yahoo.com/news/trump-backed-world-liberty-token-163545443.html), no doubt costing a lot of late-stage investors significant money.
 
@@ -32,17 +32,21 @@ But for the early investors, it's all been awesome. On Saturday, Bloomberg News 
 
 As someone who's previously done marketing work for several crypto projects, I have to say I'm concerned the industry has wandered into a reputational minefield here that's going to be very prolonged and painful to deal with.
 
-To put it bluntly, the juxtaposition this week of the WLFI token launch (which enriched the Trumps) and [surprisingly weak jobs data](https://www.yahoo.com/news/articles/august-jobs-report-u-added-141749974.html) for the U.S. economy (which impoverishes a lot of everyday Americans) is striking.
+To put it bluntly, the juxtaposition this week between the WLFI token launch (which enriched the Trumps) and [surprisingly weak jobs data](https://www.yahoo.com/news/articles/august-jobs-report-u-added-141749974.html) for the U.S. economy (which impoverishes a lot of everyday Americans) is striking.
 
-A lot of the general public probably hasn't quite connected those dots yet, but as a similar pattern repeats in the months ahead, they eventually will. Trump's protectionist, anxiety-inducing policies and general chaos will continue to take an economic toll. And he will keep lining his pocket. So there is yet ample time for people to catch on.
+A lot of the general public probably hasn't quite connected those dots yet. But as a similar pattern repeats in the months ahead, they eventually will.
 
-Some portion of the ire that results will likely be directed at the crypto industry writ large. I don't know if we're prepared for that, frankly.
+Keep in mind, Trump's protectionist, anxiety-inducing policies and general chaos will continue to take an economic toll. And he will keep lining his pocket. So there is yet ample time for people to catch on.
 
-To put it a different way: During the Biden administration, the most notorious bad actor in the crypto space as far as the general public was concerned was FTX's Sam Bankman-Fried.
+And some portion of the ire that results will likely be directed at the crypto industry writ large, since it has supported Trump so publicly. I don't know if we're prepared for that public ire, frankly.
 
-After his company collapsed in late 2022, Bankman-Fried cast quite a long shadow over the entire industry. For [normies](https://www.urbandictionary.com/define.php?term=normie), he effectively became the face of crypto for a long time, in the worst possible way. This in turn had a very real effect on user adoption, product launches, fundraising, and so on.
+To put it a different way: During the Biden administration, the most notorious bad actor in the crypto space as far as the general public was concerned was FTX's Sam Bankman-Fried. After his company collapsed in late 2022, he cast quite a long shadow over the entire industry, as anyone who was active at the time will loudly attest.
 
-By the end of the second Trump administration, *the president himself* could very well end up playing that role. If so, the public fallout for the entire crypto industry could make FTX's collapse look like a day at the beach near FTX's old headquarters in the Bahamas.  
+For [normies](https://www.urbandictionary.com/define.php?term=normie), Bankman-Fried effectively became the face of crypto for a long time, in the worst possible way. This in turn had a very real effect on user adoption, product launches, fundraising, and so on.
+
+By the end of the second Trump administration, *the president himself* could very well end up playing a similar role. If so, the public fallout for the entire crypto industry could make FTX's collapse look like a day at the beach near FTX's old headquarters in the Bahamas.
+
+Now is the time to get ready.
 
 ### Five Things: Aug. 31 to Sept. 6, 2025
 
@@ -52,7 +56,7 @@ By the end of the second Trump administration, *the president himself* could ver
 
 - **Anthropic agreed to pay $1.5 billion** to settle a copyright infringement lawsuit brought by a group of authors, marking the first such settlement of the AI boom. ([NPR](https://www.npr.org/2025/09/05/nx-s1-5529404/anthropic-settlement-authors-copyright-ai))
 
-- **The benchmark S&P 500** is now more expensive relative to its component companies' sales that it was during the 1990s' dotcom bubble. Yikes. ([Wall Street Journal](https://www.wsj.com/finance/stocks/stock-market-valuation-highs-ac291e72?st=GaebaK&reflink=desktopwebshare_permalink))
+- **The benchmark S&P 500** is now more expensive relative to its component companies' sales than it was during the 1990s dotcom bubble. Yikes. ([Wall Street Journal](https://www.wsj.com/finance/stocks/stock-market-valuation-highs-ac291e72?st=GaebaK&reflink=desktopwebshare_permalink))
 
 - **Nevada police identified** the man recently [murdered at Burning Man](https://www.hollywoodreporter.com/news/general-news/burning-man-homicide-vadim-kruglov-russian-1236361274/) as Vadim Kruglov, a 37-year-old Russian national. Friends have launched a [GoFundMe campaign](https://www.gofundme.com/f/burning-man-2025-in-loving-memory-of-vadim-kruglov) to repatriate his body to his hometown of Omsk, Russia. The Pershing County Sheriff’s Office is asking anyone with information related to Kruglov's death to contact investigators at 775-273-2641, referencing case #25-318.
 
@@ -114,7 +118,7 @@ By the end of the second Trump administration, *the president himself* could ver
 
 - **The Linea Network,** a Consensys-backed project designed to extend and scale Ethereum's capabilities as an app platform, is expected to launch this week, including an airdrop of its own token to prospective users. ([Decrypt](https://decrypt.co/338327/linea-everything-need-know-ethereum-layer-2-network-airdrop-token))
 
-- **Tether, the world's largest stablecoin issuer,** is reportedly considering a significant increase in its gold holdings. Such a strategy would represent a decidely old-school way to improve the financial backing of Tether's digital USDT token. ([The Block](https://www.theblock.co/post/369668/tether-weighing-gold-investment-surprises-mining-execs))
+- **Tether, the world's largest stablecoin issuer,** is reportedly considering a significant increase in its gold holdings. Such a strategy would represent a decidedly old-school way to improve the financial backing of Tether's digital USDT token. ([The Block](https://www.theblock.co/post/369668/tether-weighing-gold-investment-surprises-mining-execs))
 
 - **Two new research papers suggest** there have been significant strides in developing emotionally intelligent AI agents, including distinct, consistent personalities for bots depending on their training. ([Decrypt](https://decrypt.co/338279/ai-biggest-upgrade-yet-emotional-intelligence))
 
@@ -122,7 +126,7 @@ By the end of the second Trump administration, *the president himself* could ver
 
 - **Egyptian authorities raided and shut down Streameast**, believed to be the internet's largest platform for pirating sports broadcasts. ([Variety](https://news.google.com/read/CBMinAFBVV95cUxOaTROdy1VaDdZdFFpanVfNUstc3RXM1RBTTVCNzBzRzZvU21mQURGYzhKZVROa19CV3pNNDRYcDVLTE9vR2JfWUt3R2pweURmdU1tbENCcDRxNGs5a2I4NTZzVGZiSWJ0Zng0dnRlQ1JpZGUwbDFaa1dqUmQ1aFIzQUhRYUJ6aWNiUFFRcXVpQWVoWU4xUkhZb0VxY0Q?hl=en-US&gl=US&ceid=US%3Aen))
 
-- **Author Samuel Hawley** says we owe a 16th-century Japanese warlord some of the thanks for the current [global matcha shortage](https://wapo.st/3JRO3Mv).
+- **Author Samuel Hawley** says we owe a 16th-century Japanese warlord some thanks for the current [global matcha shortage](https://wapo.st/3JRO3Mv).
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
