--- a/2025/2025-09-07-wir.md
+++ b/2025/2025-09-07-wir.md
@@ -30,7 +30,7 @@ There's also the Trump family's incessant self-dealing, much of it in the crypto
 
 But for the early investors, it's all been awesome. On Saturday, Bloomberg News reported that the Trump family had [raked in $1.3 billion](https://news.google.com/read/CBMitAFBVV95cUxPVnNqUzRXb2k1OTc5a25xemlhRV81NFdiSTNSZVpjRkY5b2cweGl3cEs1S3NGR2tQSDQ4dXduc1pvMzFuX0dpTWN6a3JfVmJsQlBCYTVwYWItTDhsRk4xcXNZbEU1ZUZwVWZsTVZGTlAyV3Q2WmVoTVV4N1N5TkFybDQ2Y0RZVlFyNU9GNFVfZVM4RkFXcEViekZBMHdTQVd3TjNmYm1Xb2MxYlM3SFl6eERROTk?hl=en-US&gl=US&ceid=US%3Aen) in just a few weeks from just two crypto ventures — World Liberty and the mining firm American Bitcoin.
 
-As someone who's previously done marketing work for several crypto projects, I have to say I'm concerned the industry has wandered into a reputational minefield here that's going to be very prolonged and painful to deal with.
+As someone who's previously done marketing work for several crypto organizations, I have to say I'm concerned the industry has wandered into a reputational minefield here that's going to be very prolonged and painful to deal with.
 
 To put it bluntly, the juxtaposition this week between the WLFI token launch (which enriched the Trumps) and [surprisingly weak jobs data](https://www.yahoo.com/news/articles/august-jobs-report-u-added-141749974.html) for the U.S. economy (which impoverishes a lot of everyday Americans) is striking.
 
