--- a/2025/2025-09-07-wir.md
+++ b/2025/2025-09-07-wir.md
@@ -18,9 +18,9 @@
 
 As has been the case since the new term's [early days](https://peteramckay.medium.com/is-this-your-crypto-president-america-8d33875a7940), the latest wins for the industry are mostly in the regulatory arena:
 
-- **The Securities and Exchange Commission and the Commodity Futures Trading Commission** jointly announced a conference Sept. 29 to better ["harmonize"](https://www.theblock.co/post/369625/sec-cftc-seek-to-harmonize-on-defi-perps-contracts-and-more-plan-roundtable-later-this-month) their oversight of crypto. On Capitol hill, the latest draft of the Senate's crypto bill proposes creating a standing committee to [avoid turf wars](https://www.theblock.co/post/369716/senate-market-structure-bill-draft-proposes-sec-cftc-joint-committee-to-end-crypto-turf-wars) between the SEC and CFTC over crypto regulation.
+- **The Securities and Exchange Commission and the Commodity Futures Trading Commission** jointly announced a conference Sept. 29 to better ["harmonize"](https://www.theblock.co/post/369625/sec-cftc-seek-to-harmonize-on-defi-perps-contracts-and-more-plan-roundtable-later-this-month) their oversight of crypto. On Capitol hill, the latest draft of the Senate's crypto bill proposes creating a standing committee to [avoid future turf wars](https://www.theblock.co/post/369716/senate-market-structure-bill-draft-proposes-sec-cftc-joint-committee-to-end-crypto-turf-wars) between the market watchdog agencies over crypto.
 
-- **Polymarket,** a popular on-chain prediction platform, said it is [planning to re-enter the U.S. market](https://www.theblock.co/post/369682/polymarket-hits-all-time-high-for-new-markets-created-as-platform-eyes-us-return) after receiving a no-action letter from the CFTC, meaning that the agency doesn't intend to pursue any encorcement actions against its prediction contracts.
+- **Polymarket,** a popular on-chain prediction platform, said it is [planning to re-enter the U.S. market](https://www.theblock.co/post/369682/polymarket-hits-all-time-high-for-new-markets-created-as-platform-eyes-us-return) after receiving a no-action letter from the CFTC, meaning that the agency doesn't intend to pursue any enforcement actions against its prediction contracts.
 
 - **Lighter regulation** has also emboldened several crypto companies this year to make traditional stock offerings on Wall Street exchanges. The latest: Shares of Solana treasury company SOL Strategies are [expected to begin trading](https://decrypt.co/338337/solana-treasury-company-sol-strategies-begin-trading-nasdaq) on Nasdaq this week. Separately, the Winklevoss brothers' Gemini Space Station, a crypto exchange and custodian firm, [registered](https://techcrunch.com/2025/08/15/winklevoss-twins-crypto-company-gemini-files-for-ipo/) with the SEC on Friday to do an initial public offering (IPO) of shares soon, pending the regulator's approval.
 
