Adding story links, some with draft summaries by Leo/Llama 3.1 8B

--- a/2025/2025-09-14-wir.md
+++ b/2025/2025-09-14-wir.md
@@ -28,15 +28,45 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
 
  -->
 
-- Robinhood added to S&P 500, but Strategy is snubbed. ([]()) <!-- Links TK -->
+- Robinhood added to S&P 500, but Strategy is snubbed. ([]()) <!-- Links TK --> | Bernstein is bullish: https://www.theblock.co/post/369995/robinhood-upside-sp-500-tokenization | CBOE looking to add continuous bitcoin, eth futures: https://www.theblock.co/post/370033/cboe-to-list-continuous-bitcoin-and-ether-futures | Daioly bitcoin ETF inflows hit one-month high on Monday: https://decrypt.co/338613/bitcoin-etfs-draw-in-368m-showing-strongest-demand-since-august
+
+- Kazakhstan is weighing a possible sovereign crypto fund: https://decrypt.co/338595/kazakhstan-president-wants-state-digital-asset-fund-crypto-payments-in-smart-city
 
 - Linea launch ([]()) <!-- Links TK -->
 
+- Bloomberg Crypto: https://www.youtube.com/results?search_query=bloomberg+crypto
+
+- New Google blockchain aims to compete with XRP: https://news.google.com/read/CBMicEFVX3lxTE9nc2tGV0tieE1aZFplam9tNW81WWMydGV3UHVicnZ6bTExcXQ0TFN4dll3NjBsYUtGUGI4Q3lWdVlpa29XQUtFMUdNRDB5WVBvRkJ6bGYtd2dINWY2NThySW82SnQ0aVJ6VnMya1d6WS0?hl=en-US&gl=US&ceid=US%3Aen
+
+- Eightco's meteoric rise to an $8.5 billion valuation: https://www.barrons.com/articles/eightco-worldcoin-dan-ives-crypto-strategy-19f77bdf
+
+- How Trump came around on crypto: https://www.bloomberg.com/news/articles/2025-09-08/how-bitcoin-ether-are-rallying-as-trump-embraces-crypto <!-- See if you can find a hosted, non-paywalled version of this. -->
+
+- 80% of ransomware attacks now involve AI: https://mitsloan.mit.edu/ideas-made-to-matter/80-ransomware-attacks-now-use-artificial-intelligence
+
+- CA teen is becoming the "Greta Thundberg of AI." https://www.latimes.com/politics/newsletter/2025-09-08/chabria-monday-politics-newsletter-ai-artificial-intelligence-sb-53
+
+- New DOGE ETF goes live <!-- Link TK -->
+
+- Travel platforms are worried about AI agents. https://www.ft.com/content/4d1acaff-07e4-4739-9ea4-5c6cba553e74 <!-- Sub out Google News referral link -->
+
+- Nasdaq makes strategic investment in Gemini: https://www.theblock.co/post/369989/nasdaq-gemini-investment | https://finance.yahoo.com/news/exclusive-winklevoss-founded-crypto-exchange-090622770.html
+
+- Sharplink has begun a $1.5 billion share repurchase: https://www.theblock.co/post/370046/ethereum-treasury-sharplink-initiates-1-5-billion-share-repurchase-program-says-below-nav-buying-is-immediately-accretive
+
+
 - **Nasdaq has filed a rule change with the SEC** to allow tokenized versions of listed stocks and ETFs to trade on the same order book as their traditional counterparts, potentially bringing blockchain-based settlement to the national market system. The proposal aims to balance tokenization with investor protections, setting a higher bar for equivalence to the underlying stock and addressing concerns about overseas platforms that market tokenized U.S. equities without conferring shareholder rights. ([The Block](https://www.theblock.co/post/369814/nasdaq-seeks-sec-nod-to-trade-tokenized-securities-alongside-traditional-stocks)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+
+- Senate Dems laid out their proposals for crypto regulation: https://thehill.com/policy/technology/5492926-senate-democrats-lay-out-framework-for-crypto-market-structure-bill/ | https://www.theblock.co/post/370018/senate-democrats-crypto-market-structure-framework
 
 - **CoinShares**, a European crypto asset manager, is set to go public in the US via a $1.2 billion SPAC merger with Nasdaq-listed Vine Hill, positioning it as one of the largest publicly traded digital asset managers globally. This move is expected to fuel CoinShares' international expansion and enable US investors to participate in its global growth, with the firm aiming to capitalize on stronger valuations and a favorable regulatory environment. ([The Block](https://www.theblock.co/post/369821/coinshares-set-to-go-public-in-us-via-1-2-billion-spac-merger-with-nasdaq-listed-vine-hill)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- TK ([]())
+- OpenAI is facing growing opposition from California's regulators and philanthropic groups over its plan to restructure as a for-profit company, with concerns that the move could violate the state's charitable trust law and prioritize profits over its mission to create AI for the public benefit. The company's leaders are discussing a last-ditch option of relocating out of California if regulators complicate the transition, but OpenAI has stated it has no plans to leave the state. ([Wall Street Journal](https://www.wsj.com/tech/ai/openai-for-profit-conversion-opposition-07ea7e25?st=8bUDUb&reflink=desktopwebshare_permalink)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+
+- AlterEgo, a Boston startup, has unveiled a wearable device that enables users to communicate silently with computers by detecting faint neuromuscular signals in the face and throat when a person internally verbalizes words. This non-invasive AI interface, described as a "near-telepathic" interface, has the potential to revolutionize how people interact with artificial intelligence systems and connected devices without the need for keyboards, touchscreens, or spoken voice. ([Decrypt](https://decrypt.co/338527/near-telepathic-wearable-communicate-silently-devices)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+
+
+
 
 ### Market Snapshot
 
@@ -94,18 +124,33 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
 
 ### Looking Ahead
 
-- **Gen Z is embracing the uncertainty** of an AI-driven job market with humor and adaptability, but experts warn that this lighthearted approach may mask a deeper need for preparation and strategic thinking. To stay ahead, educators, employers, and policymakers are being urged to embed AI literacy into curricula and foster a culture of proactive adaptability, rather than simply reacting to change. ([Fortune](https://www.yahoo.com/news/articles/gen-z-laughing-face-ai-123000930.html)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **Gen Z is embracing the uncertainty** of an AI-driven job market with humor and adaptability, but experts warn that this lighthearted approach may mask a deeper need for preparation and strategic thinking. To stay ahead, educators, employers, and policymakers are being urged to embed AI literacy into curricula and foster a culture of proactive adaptability, rather than simply reacting to change. ([Fortune](https://www.yahoo.com/news/articles/gen-z-laughing-face-ai-123000930.html)) <!-- Draft news summary by Leo/Llama 3.1 8B --> | **Stanford computer science professor Jure Leskovec** is turning to traditional paper exams for his 400-student classes, citing the need to test students' knowledge and critical thinking skills in the age of AI. Leskovec's approach highlights the challenges of implementing AI in education and the growing demand for human skills, particularly domain expertise, in the workforce. ([Fortune](https://www.yahoo.com/news/articles/stanford-computer-science-professor-went-093500264.html)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- TK ([]())
+- Google's AI Mode, a new search tool that provides real-time AI-generated answers, has gained significant traction with over 100 million monthly active users in the US and India, and is expected to become the default search experience for Google. However, the shift to AI Mode raises concerns about the impact on the web economy, with some experts warning that it could lead to a decline in traffic for publishers who rely on traditional Google search results. ([Mashable](https://mashable.com/article/google-ai-mode-search-default-rumors))  <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- TK ([]())
+- NYT Douthat/Bannon intvu. Why do Bannon and Andreessen agree about feds wanting a consolidated tech sector? ([]()) <!-- Link TK -->
+
+- Research is raising concerns that the increasing reliance on AI-powered chatbots like ChatGPT could lead to a decline in the creation of new knowledge, as humans may lose incentive to contribute to and participate in knowledge-sharing platforms like Stack Overflow and Wikipedia. This could have far-reaching consequences, including a "dumber" web and a decrease in critical thinking skills, as humans become reliant on AI for answers and lose the ability to engage in novel and creative thinking. ([Wall Street Journal](https://www.wsj.com/tech/ai/will-ai-choke-off-the-supply-of-knowledge-8a71cbcd?st=y4TZtZ&reflink=desktopwebshare_permalink)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
 ### Odds & Ends
 
-- **Stanford computer science professor Jure Leskovec** is turning to traditional paper exams for his 400-student classes, citing the need to test students' knowledge and critical thinking skills in the age of AI. Leskovec's approach highlights the challenges of implementing AI in education and the growing demand for human skills, particularly domain expertise, in the workforce. ([Fortune](https://www.yahoo.com/news/articles/stanford-computer-science-professor-went-093500264.html)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- **Sub sandwiches have emerged as an unlikely symbol** of resistance to the White House's militarization of Washington's streets. ([BuzzFeed](https://www.yahoo.com/news/articles/donald-trump-definitely-not-going-185636150.html))
+- TK ([Slate](https://slate.com/culture/2025/09/jeopardy-game-watson-questions-final-ken-jennings.html)) <!-- Interesting history of Watson on Jeopardy! Some other clips below... -->
 
+<!--
+
+- Product homepage: https://www.ibm.com/watson
+
+- Computer World: https://www.computerworld.com/article/1639750/ibm-watson-will-know-what-you-did-last-summer.html
+
+-->
+
+- <!-- Astronomers now think that Oumuamua was a big piece of ice that broke off of Pluto. -->   
+([Space.com](https://www.space.com/astronomy/dwarf-planets/1st-known-interstellar-visitor-oumuamua-is-an-exo-pluto-a-completely-new-class-of-object-scientists-say))
+
+- **Sub sandwiches have emerged as an unlikely symbol** of resistance to the militarization of Washington's streets by the Trump administration. ([BuzzFeed](https://www.yahoo.com/news/articles/donald-trump-definitely-not-going-185636150.html))
+
+- A startup has begun testing flying cars at San Francisco International Airport. <!-- YouTube link TK -->
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
