Writing through news summaries

--- a/2025/2025-09-14-wir.md
+++ b/2025/2025-09-14-wir.md
@@ -128,29 +128,29 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
 
 - Google's AI Mode, a new search tool that provides real-time AI-generated answers, has gained significant traction with over 100 million monthly active users in the US and India, and is expected to become the default search experience for Google. However, the shift to AI Mode raises concerns about the impact on the web economy, with some experts warning that it could lead to a decline in traffic for publishers who rely on traditional Google search results. ([Mashable](https://mashable.com/article/google-ai-mode-search-default-rumors))  <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- NYT Douthat/Bannon intvu. Why do Bannon and Andreessen agree about feds wanting a consolidated tech sector? ([]()) <!-- Link TK -->
 
 - Research is raising concerns that the increasing reliance on AI-powered chatbots like ChatGPT could lead to a decline in the creation of new knowledge, as humans may lose incentive to contribute to and participate in knowledge-sharing platforms like Stack Overflow and Wikipedia. This could have far-reaching consequences, including a "dumber" web and a decrease in critical thinking skills, as humans become reliant on AI for answers and lose the ability to engage in novel and creative thinking. ([Wall Street Journal](https://www.wsj.com/tech/ai/will-ai-choke-off-the-supply-of-knowledge-8a71cbcd?st=y4TZtZ&reflink=desktopwebshare_permalink)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
 ### Odds & Ends
 
-
-- TK ([Slate](https://slate.com/culture/2025/09/jeopardy-game-watson-questions-final-ken-jennings.html)) <!-- Interesting history of Watson on Jeopardy! Some other clips below... -->
-
 <!--
+
+- NYT Douthat/Bannon intvu. Why do Bannon and Andreessen agree about feds wanting a consolidated tech sector? ([]()) <!-- Link TK
+
+- TK ([Slate](https://slate.com/culture/2025/09/jeopardy-game-watson-questions-final-ken-jennings.html)) <!-- Interesting history of Watson on Jeopardy! Some other clips below...
+
 
 - Product homepage: https://www.ibm.com/watson
 
 - Computer World: https://www.computerworld.com/article/1639750/ibm-watson-will-know-what-you-did-last-summer.html
 
--->
+**Sub sandwiches have emerged as an unlikely symbol** of resistance to the militarization of Washington's streets by the Trump administration. ([BuzzFeed](https://www.yahoo.com/news/articles/donald-trump-definitely-not-going-185636150.html))
 
-- <!-- Astronomers now think that Oumuamua was a big piece of ice that broke off of Pluto. -->   
-([Space.com](https://www.space.com/astronomy/dwarf-planets/1st-known-interstellar-visitor-oumuamua-is-an-exo-pluto-a-completely-new-class-of-object-scientists-say))
+-->   
 
-- **Sub sandwiches have emerged as an unlikely symbol** of resistance to the militarization of Washington's streets by the Trump administration. ([BuzzFeed](https://www.yahoo.com/news/articles/donald-trump-definitely-not-going-185636150.html))
+- **Astronomers at Arizona State University** now believe that Oumuamua, a mysterious interstellar object that passed into our solar system in 2017, was a giant sheet of nitrogen ice. They say it may have broken off from a Pluto-like exoplanet. ([Space.com](https://www.space.com/astronomy/dwarf-planets/1st-known-interstellar-visitor-oumuamua-is-an-exo-pluto-a-completely-new-class-of-object-scientists-say))
 
-- A startup has begun testing flying cars at San Francisco International Airport. <!-- YouTube link TK -->
+- **The startup Alef Aeronautics** has begun testing flying cars at two San Francisco Bay Area airports. ([KTVU](https://www.youtube.com/watch?v=F1x87FS-xtE))
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
