Final market data + writing through news summaries

--- a/2025/2025-09-14-wir.md
+++ b/2025/2025-09-14-wir.md
@@ -14,7 +14,21 @@
 
 <hr>
 
-**Lead item here.** Yadda yadda yadda.
+<!--
+
+**The tragic death of activist and podcaster Charlie Kirk** is the most online political assassination in U.S. history.
+
+That adjective . "very online"
+
+Kirk built his following online, through podcasting and social networks. And the young people who went to hear him speak in person no doubt found him online.
+
+People who still get their news from traditional sources like could be forgiven for having no clue who he was until he burst into the news TKTKTK.
+
+The U.S. Constitution's First Amendment protects lies, hate speech, and nonsense.** Count me among the people who think that's ultimately a *good* thing, ugly though such stuff is to encounter in day-to-day life, as it ultimately helps protect more socially beneficial forms of expression as well.
+
+However, that doesn't mean lies, hate speech, and nonsense should be anyone's business model.
+
+-->
 
 ### Five Things: Sept. 7-13, 2025
 
@@ -26,7 +40,7 @@ AI prompt for drafting early news summaries...
 
 I'm thinking of using the news article in this browser tab in my upcoming newsletter, which contains a bulleted list summarizing important tech news each week. Could you please summarize this story in a paragraph of 1-2 sentences, written in a style that I could use for my newsletter? Do not include a headline.
 
- -->
+-->
 
 - Robinhood added to S&P 500, but Strategy is snubbed. ([]()) <!-- Links TK --> | Bernstein is bullish: https://www.theblock.co/post/369995/robinhood-upside-sp-500-tokenization | CBOE looking to add continuous bitcoin, eth futures: https://www.theblock.co/post/370033/cboe-to-list-continuous-bitcoin-and-ether-futures | Daioly bitcoin ETF inflows hit one-month high on Monday: https://decrypt.co/338613/bitcoin-etfs-draw-in-368m-showing-strongest-demand-since-august
 
@@ -65,9 +79,6 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
 
 - AlterEgo, a Boston startup, has unveiled a wearable device that enables users to communicate silently with computers by detecting faint neuromuscular signals in the face and throat when a person internally verbalizes words. This non-invasive AI interface, described as a "near-telepathic" interface, has the potential to revolutionize how people interact with artificial intelligence systems and connected devices without the need for keyboards, touchscreens, or spoken voice. ([Decrypt](https://decrypt.co/338527/near-telepathic-wearable-communicate-silently-devices)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-
-
-
 ### Market Snapshot
 
 *A quick look at some major indicators as of Friday's close on Wall Street:*
@@ -86,67 +97,54 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
   <tbody>
    <tr>
      <td>Bitcoin</td>
-     <td>$</td>
-     <td>+%</td>
-     <td>+%</td>
+     <td>$116,442.00</td>
+     <td>+4.3%</td>
+     <td>+24.1%</td>
    </tr>
 
    <tr>
      <td>Nasdaq 100</td>
-     <td></td>
-     <td>+%</td>
-     <td>+%</td>
+     <td>24,092.19</td>
+     <td>+1.9%</td>
+     <td>+14.7%</td>
    </tr>
 
    <tr>
      <td>Gold</td>
-     <td>$/oz</td>
-     <td>+%</td>
-     <td>+%</td>
+     <td>$3,686.40/oz</td>
+     <td>+0.9%</td>
+     <td>+40.2%</td>
    </tr>
 
    <tr>
      <td>USD Index</td>
-     <td></td>
-     <td>-%</td>
-     <td>-%</td>
+     <td>97.61</td>
+     <td>-0.1%</td>
+     <td>-10.0%</td>
    </tr>
 
    <tr>
      <td>10-yr U.S.<br> Treasury Yield</td>
-     <td>%</td>
-     <td>-</td>
-     <td>-</td>
+     <td>4.061%</td>
+     <td>-0.025</td>
+     <td>-0.512</td>
    </tr>
+
+
+
 
 </tbody>
 </table>
 
 ### Looking Ahead
 
-- **Gen Z is embracing the uncertainty** of an AI-driven job market with humor and adaptability, but experts warn that this lighthearted approach may mask a deeper need for preparation and strategic thinking. To stay ahead, educators, employers, and policymakers are being urged to embed AI literacy into curricula and foster a culture of proactive adaptability, rather than simply reacting to change. ([Fortune](https://www.yahoo.com/news/articles/gen-z-laughing-face-ai-123000930.html)) <!-- Draft news summary by Leo/Llama 3.1 8B --> | **Stanford computer science professor Jure Leskovec** is turning to traditional paper exams for his 400-student classes, citing the need to test students' knowledge and critical thinking skills in the age of AI. Leskovec's approach highlights the challenges of implementing AI in education and the growing demand for human skills, particularly domain expertise, in the workforce. ([Fortune](https://www.yahoo.com/news/articles/stanford-computer-science-professor-went-093500264.html)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **Mashable's Matt Binder explored** the possibility that Google might soon [replace its venerable search interface](https://mashable.com/article/google-ai-mode-search-default-rumors) at google.com with the company's AI Mode feature. Such a change could have serious implications for the broader internet, including traffic referrals to site publishers.
 
-- Google's AI Mode, a new search tool that provides real-time AI-generated answers, has gained significant traction with over 100 million monthly active users in the US and India, and is expected to become the default search experience for Google. However, the shift to AI Mode raises concerns about the impact on the web economy, with some experts warning that it could lead to a decline in traffic for publishers who rely on traditional Google search results. ([Mashable](https://mashable.com/article/google-ai-mode-search-default-rumors))  <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **My former Wall Street Journal colleague Greg Ip** is worried that popular AI apps' incessant remixing of existing knowledge might lead in the long term to [fewer real breakthroughs](https://www.wsj.com/tech/ai/will-ai-choke-off-the-supply-of-knowledge-8a71cbcd?st=y4TZtZ&reflink=desktopwebshare_permalink) that produce new knowledge. For example, there are already signs of declining human contributions to knowledge-sharing sites like StackOverflow and Wikipedia. Hmmm...
 
-
-- Research is raising concerns that the increasing reliance on AI-powered chatbots like ChatGPT could lead to a decline in the creation of new knowledge, as humans may lose incentive to contribute to and participate in knowledge-sharing platforms like Stack Overflow and Wikipedia. This could have far-reaching consequences, including a "dumber" web and a decrease in critical thinking skills, as humans become reliant on AI for answers and lose the ability to engage in novel and creative thinking. ([Wall Street Journal](https://www.wsj.com/tech/ai/will-ai-choke-off-the-supply-of-knowledge-8a71cbcd?st=y4TZtZ&reflink=desktopwebshare_permalink)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **Fortune just published** a couple of good reads about how AI is  transforming American higher education, by firsthand witnesses. Bentley University lecturer Jeff LeBlanc says his students are facing the prospect of a post-graduation job market upended by AI with "[a blend of pragmatism and fatalism](https://www.yahoo.com/news/articles/gen-z-laughing-face-ai-123000930.html) that feels uniquely Gen Z." Meanwhile, Stanford computer science professor Jure Leskovec says he turned to [traditional in-person paper exams](https://www.yahoo.com/news/articles/gen-z-laughing-face-ai-123000930.html) for his 400-student classes two years ago to counter AI-fueled shortcuts on take-home assignments. Perhaps even more surprising: The students requested the change.
 
 ### Odds & Ends
-
-<!--
-
-- NYT Douthat/Bannon intvu. Why do Bannon and Andreessen agree about feds wanting a consolidated tech sector? ([]()) <!-- Link TK
-
-- TK ([Slate](https://slate.com/culture/2025/09/jeopardy-game-watson-questions-final-ken-jennings.html)) <!-- Interesting history of Watson on Jeopardy! Some other clips below...
-
-
-- Product homepage: https://www.ibm.com/watson
-
-- Computer World: https://www.computerworld.com/article/1639750/ibm-watson-will-know-what-you-did-last-summer.html
-
-**Sub sandwiches have emerged as an unlikely symbol** of resistance to the militarization of Washington's streets by the Trump administration. ([BuzzFeed](https://www.yahoo.com/news/articles/donald-trump-definitely-not-going-185636150.html))
-
--->   
 
 - **Astronomers at Arizona State University** now believe that Oumuamua, a mysterious interstellar object that passed into our solar system in 2017, was a giant sheet of nitrogen ice. They say it may have broken off from a Pluto-like exoplanet. ([Space.com](https://www.space.com/astronomy/dwarf-planets/1st-known-interstellar-visitor-oumuamua-is-an-exo-pluto-a-completely-new-class-of-object-scientists-say))
 
